# matsuzawa-20260213-3

./: README.md  package-lock.json  pyproject.toml
.github/actions/run-claude-code/: action.yml
.github/actions/run-open-code/: action.yml
.github/prompts/: run_code_generator.md  run_diagram_generator.md  run_latex_editor.md
.github/workflows/: compile_latex.yml  interactive_claude_session.yml  run_code_generator.yml  run_diagram_generator.yml
.research/: research_history.json
.research/diagrams/run_20260226_105837_1df52c/: metadata.json  planning.json
.research/diagrams/run_20260226_105837_1df52c/iter_1/: details.json
.research/diagrams/run_20260226_110928_abee57/: metadata.json  planning.json
.research/diagrams/run_20260226_110928_abee57/iter_1/: details.json
.research/diagrams/run_20260226_110928_abee57/iter_2/: details.json
.research/diagrams/run_20260226_123933_047a6f/: metadata.json  planning.json
.research/latex/mdpi/: main.tex  references.bib
.research/results/: stderr.txt  stdout.txt
.research/results/comparative-1-gpt4o-gsm8k/: metrics.json
.research/results/comparative-1-gpt4o-svamp/: metrics.json
.research/results/comparison/: aggregated_metrics.json
.research/results/proposed-gpt4o-gsm8k/: metrics.json
.research/results/proposed-gpt4o-svamp/: metrics.json
config/: config.yaml  evaluate.yaml
config/run/: comparative-1-gpt4o-gsm8k.yaml  comparative-1-gpt4o-svamp.yaml  proposed-gpt4o-gsm8k.yaml  proposed-gpt4o-svamp.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
(+4 files in other folders)
